change layouts refactoring

--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -10,4 +10,5 @@
     <string name="tracks_header">Tracks</string>
     <string name="release_date_label">Release Date:</string>
     <string name="album_title_label">Album:</string>
+    <string name="release_label">Release:</string>
 </resources>
